--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1 class="navbar-brand" style="margin: auto; font-size: 30px;">Weather Dashboard</h1>
     </nav>
     <div class="row">
-        <div class="col-sm-3" style="background-color: lightgray;">
+        <div class="col-sm-3" style="background-color: #F0F0F0 ;">
             <div class="search">
                 <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2 searchInput" type="search" aria-label="Search" placeholder="Boston">
@@ -36,7 +36,9 @@
             </div>
             <div class="searchHistory"></div>
         </div>
-        <div class="col-sm-9"></div>
+        <div class="col-sm-9">
+            <div class="currentWeather"></div>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
