current weather data displays when city is searched

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <div class="searchHistory"></div>
         </div>
         <div class="col-sm-9">
-            <div class="currentWeather"></div>
+            <div class="currentWeather">
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
