--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="row">
         <div class="col-sm-3" style="background-color: #F0F0F0 ;">
             <div class="search">
+                <h3>Search For a City:</h3>
                 <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2 searchInput" type="search" aria-label="Search" placeholder="Boston">
                 <i class="fas fa-search search-icon"></i>
@@ -39,6 +40,8 @@
         <div class="col-sm-9">
             <div class="currentWeather">
             </div>
+            <h2>5 Day Forecast</h2>
+            <div class="fiveDay"></div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
