--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <i class="fas fa-search search-icon"></i>
             </div>
             <div class="searchHistory"></div>
+            <button type="button" class="btn btn-primary">Clear Search History</button>
         </div>
         <div class="col-sm-9">
             <div class="currentWeather">
